<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>pl.sgorski.nethelt</groupId>
    <artifactId>nethelt-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>NetHelt - Parent</name>
    <description>NetHelt - Parent</description>

    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.junit>6.0.0</version.junit>
        <version.spring>4.0.2</version.spring>
        <version.maven.compiler>3.15.0</version.maven.compiler>
        <version.jacoco>0.8.14</version.jacoco>
        <version.lombok>1.18.42</version.lombok>
        <version.mapstruct>1.6.3</version.mapstruct>
        <version.jpackage.plugin>1.7.4</version.jpackage.plugin>
        <version.surefire.plugin>3.5.5</version.surefire.plugin>
        <version.failsafe.plugin>3.5.5</version.failsafe.plugin>
        <version.spotless.plugin>3.7.0</version.spotless.plugin>
    </properties>

    <modules>
        <module>core</module>
        <module>desktop-client</module>
        <module>web-api</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.spring}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>pl.sgorski.nethelt</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.sgorski.nethelt</groupId>
                <artifactId>client-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.sgorski.nethelt</groupId>
                <artifactId>client-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.sgorski.nethelt</groupId>
                <artifactId>gui-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.sgorski.nethelt</groupId>
                <artifactId>web-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${version.lombok}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${version.mapstruct}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${version.jacoco}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludes>
                            <exclude>**/config/**</exclude>
                            <exclude>**/exception/**</exclude>
                            <exclude>**/dto/**</exclude>
                            <exclude>**/mapper/**</exclude>
                            <exclude>**/*Properties.*</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.panteleyev</groupId>
                    <artifactId>jpackage-maven-plugin</artifactId>
                    <version>${version.jpackage.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.surefire.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${version.failsafe.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.maven.compiler}</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${version.mapstruct}</version>
                            </path>
                        </annotationProcessorPaths>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${version.spotless.plugin}</version>
                <configuration>
                    <java>
                        <googleJavaFormat/>
                    </java>
                    <lineEndings>UNIX</lineEndings>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>coverage</id>
            <modules>
                <module>coverage-aggregator</module>
            </modules>
        </profile>
    </profiles>
</project>
